Bug 432661 - Initial window position is wrong and forced
Summary: Initial window position is wrong and forced
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: VHI normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-02-08 18:53 UTC by Fabian Vogt
Modified: 2021-02-08 21:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.79
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2021-02-08 18:53:51 UTC
Since commit 7766259eb5287d11d2ef60b50da9255b1307df3c ("Refactor window geometry save/restore code to be less fragile"), windows open in the wrong initial location and ignore kwin's placement strategy. In the case of openQA, dolphin (and kate, kontact, etc.) no longer open in the top left but now in the bottom right:

https://openqa.opensuse.org/tests/1616357#step/dolphin/4 (good)
https://openqa.opensuse.org/tests/1616644#step/dolphin/6 (bad)

I believe this is because of wrong fallback values treating window size as X/Y positions in KWindowConfig::restoreWindowPosition.
Comment 1 Nate Graham 2021-02-08 18:54:51 UTC
Can confirm, MR incoming.
Comment 2 Bug Janitor Service 2021-02-08 18:55:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfig/-/merge_requests/50
Comment 3 Nate Graham 2021-02-08 21:36:57 UTC
Git commit 97accd14d732f3eda1c25bb58290cb9311040798 by Nate Graham.
Committed on 08/02/2021 at 18:53.
Pushed by ngraham into branch 'master'.

Fix window positioning regression due to incorrect fallback in fallback

We have a fallback string that gets searched for in the KCM, but that
fallback itself should not have a fallback, or else we always use that
second fallback and the window gets positioned incorrectly the first
time it's opened. So let's replace the second fallback with -1.
FIXED-IN: 5.79

M  +2    -2    src/gui/kwindowconfig.cpp

https://invent.kde.org/frameworks/kconfig/commit/97accd14d732f3eda1c25bb58290cb9311040798